2006-06-21 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: Fixed bug 1510144 changed
	IP0H to IPH0.

2006-06-19 Raphael Neider <rneider AT web.de>

	* src/pic/glue.h,src/pic16/glue.h: added prototypes
	* src/pic/glue.c,src/pic16/glue.c (pic1x_stringInSet,
	  pic1x_emitSymbolIfNew): NEW, check for a string in a set,
	  (pic14printExterns,pic14printPublics,pic16printPublics,
	  pic16_printExterns): use new functions to emit symbols
	  (picglue,pic16glue): emit publics before emitting externs
	* src/pic/gen.c,src/pic16/gen.c (genFunction): remember the names of
	  locally defined functions to avoid bug #1443651
	* support/regression/tests/bug-716242.c: removed pic16 workaround
	* support/regression/ports/pic16/spec.mk: ignore errors during build

2006-06-19 Raphael Neider <rneider AT web.de>

	* src/pic/glue.h: added pic14aopLiteral prototype
	* src/pic/glue.c (pic14aopLiteral): return unsigned int
	* src/pic/gen.c: removed stdint.h dependency
	  (aopGet): use Safe_strdup()
	  (bitpatternFromVal): removed, replaced use with pic14aopLiteral
	  (genDataPointerSet): use pic14aopLiteral()
	* src/pic16/glue.h, src/pic16/glue.c, src/pic16/gen.c: similar changes
	  for pic16; thanks to Bernhard and Maarten

2006-06-18 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/structflexarray.c: flexible array members
	  not supported by gcc < 3
	* sim/ucsim/configure, sim/ucsim/configure.in: do not compile serio
	  GUI tool by default
	* src/pic/gen.c: don't include [p]strdin.h on solaris
	* support/Util/pstdint.h: addad svn attributes
	* support/regression/tests/constantRange.c,
	  support/regression/tests/rotate.c: include inttypes.h instead
	  stdint.h on solaris, addad svn attributes

2006-06-18 Raphael Neider <rneider AT web.de>

	* src/SDCCsymt.c (initCSupport): change return type of divschar to
	  int for PIC16
	* src/pic16/genarith.c (genAddLit): sign-extend via standard routine